--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </section>
     
     <section id="results">
+      <h2>Calculation details</h2>
       <h2 id="current-calculation">
-        Calculation details:
         0
       </h2>
       <h2>
